<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/packages"
                android:title="@string/packages"/>
        <item
                android:id="@+id/venues"
                android:title="@string/venues"/>
        <item
                android:id="@+id/products"
                android:title="@string/products"/>
        <item
                android:id="@+id/payment"
                android:title="@string/payment"/>

        <item
                android:id="@+id/cart"
                android:title="@string/cart"/>

        <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us"/>

        <item
                android:id="@+id/bookings"
                android:title="@string/bookings"/>
    </group>

</menu>
