<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <TextView style="@style/TextAppearance.AppCompat.Title"
              android:clickable="true"
              android:id="@+id/orders"
              android:layout_width="match_parent"
              android:padding="15dp"
              android:background="?android:attr/selectableItemBackground"
              android:layout_height="wrap_content"
              android:text="@string/orders"/>
    <View android:alpha="0.3" android:background="#000000" android:layout_width="match_parent"
          android:layout_height="1dp"/>

    <TextView style="@style/TextAppearance.AppCompat.Title"
              android:id="@+id/packages"
              android:clickable="true"
              android:layout_width="match_parent"
              android:padding="15dp"
              android:background="?android:attr/selectableItemBackground"
              android:layout_height="wrap_content"
              android:text="@string/packages"/>
    <View android:alpha="0.3" android:background="#000000" android:layout_width="match_parent"
          android:layout_height="1dp"/>

    <TextView style="@style/TextAppearance.AppCompat.Title"
              android:id="@+id/venues"
              android:clickable="true"
              android:layout_width="match_parent"
              android:padding="15dp"
              android:background="?android:attr/selectableItemBackground"
              android:layout_height="wrap_content"
              android:text="@string/venues"/>
    <View android:alpha="0.3" android:background="#000000" android:layout_width="match_parent"
          android:layout_height="1dp"/>

    <TextView style="@style/TextAppearance.AppCompat.Title"
              android:id="@+id/products"
              android:clickable="true"
              android:layout_width="match_parent"
              android:padding="15dp"
              android:background="?android:attr/selectableItemBackground"
              android:layout_height="wrap_content"
              android:text="@string/products"/>
    <View android:alpha="0.3" android:background="#000000" android:layout_width="match_parent"
          android:layout_height="1dp"/>

    <TextView style="@style/TextAppearance.AppCompat.Title"
              android:id="@+id/bookings"
              android:clickable="true"
              android:layout_width="match_parent"
              android:padding="15dp"
              android:background="?android:attr/selectableItemBackground"
              android:layout_height="wrap_content"
              android:text="@string/bookings"/>
    <View android:alpha="0.3" android:background="#000000" android:layout_width="match_parent"
          android:layout_height="1dp"/>


</LinearLayout>