<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent"
            android:layout_width="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/package_name">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/name"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/package_description">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/description"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/address"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/phone"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView android:id="@+id/image" android:layout_margin="15dp" android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                           style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                                           android:layout_margin="15dp"
                                                           android:text="@string/add"
                                                           android:id="@+id/add_button"
                                                           android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>