<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:id="@+id/email"
                                                                 android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:id="@+id/password"
                                                                 android:inputType="textPassword"
                                                                 android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                           style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                                           android:layout_margin="15dp"
                                                           android:text="@string/sign_in"
                                                           android:id="@+id/sign_button"
                                                           android:layout_height="wrap_content"/>

        <View android:layout_weight="1" android:layout_width="0dp" android:layout_height="match_parent"/>

        <TextView android:layout_gravity="center_vertical"
                  android:padding="15dp" style="@style/TextAppearance.AppCompat.Body1"
                  android:layout_width="wrap_content"
                  android:textColor="@color/colorPrimary"
                  android:text="@string/add_account"
                  android:clickable="true"
                  android:background="?android:attr/selectableItemBackground"
                  android:id="@+id/sign_alternate"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>