<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".admin.AddProductActivity">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/name"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/package_description">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/description"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/price">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/price"
                                                                     android:inputType="number"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout android:id="@+id/images_container" android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                           style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                                           android:layout_margin="15dp"
                                                           android:text="@string/add_product"
                                                           android:id="@+id/add_product"
                                                           android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>