<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/order_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_summary" android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"/>
        <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                tools:text="orders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orders"
                app:layout_constraintTop_toBottomOf="@+id/order_summary"
                app:layout_constraintStart_toStartOf="@+id/order_summary"
                android:layout_marginTop="15dp" app:layout_constraintEnd_toStartOf="@+id/prices"
                android:layout_marginEnd="15dp"/>

        <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                tools:text="prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prices" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/order_summary"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prices"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/phone"
                                                                     android:inputType="phone"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_layout"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/phone_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/address"
                                                                     android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                           style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                                           android:text="@string/place_order"
                                                           android:id="@+id/place_order"
                                                           android:layout_height="wrap_content"
                                                           android:layout_marginTop="8dp"
                                                           app:layout_constraintTop_toBottomOf="@+id/address_layout"
                                                           app:layout_constraintStart_toStartOf="@+id/orders"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>